# RustStudy

./: .gitignore  Cargo.toml  basic0.ipynb
A_basic/: Data_Types-Scalar-Compound-Types.ipynb  Data_Types-Scalar.ipynb  Functions.ipynb  Numeric Operations.ipynb  Repetition_with_Loops.ipynb  Variables_and_Mutability.ipynb  basic.ipynb  if_Expressions.ipynb
B_ownership/: References_and_Borrowing.ipynb  The_Slice_Type.ipynb  basic.ipynb  functions_move-copy.ipynb  move-copy.ipynb
C_structs/: Defining_and_Instantiating.ipynb  Method.ipynb
D_enums_and_pattern_matching/: Defining_an_Enum.ipynb  Option_Enum.ipynb  if-let.ipynb  match.ipynb
E_common_collections/: HashMap.ipynb  Vec.ipynb  string.ipynb
a_basic/: Cargo.toml
b_advanced/: Cargo.toml
b_basic/: Cargo.toml
c_advanced/: Cargo.toml
c_basic/: Cargo.toml
c_concurrency/: Cargo.toml
c_error_handing/: Cargo.toml
c_error_handling/: Cargo.toml
c_pattern_matching/: Cargo.toml
c_project_demo/: Cargo.toml  PackageLayout.md
d_advanced/: Cargo.toml
d_error_handing/: Cargo.toml
demo/: Cargo.toml
e_advanced/: Cargo.toml
e_container/: Cargo.toml
f_advanced/: Cargo.toml
s_concurrency/: Cargo.toml
w_advanced/: Cargo.toml
y_project_demo/: Cargo.toml
y_project_structure/: Cargo.toml  summary_help.md
y_test/: Cargo.toml  TargetSelection_help.md
z_std/: Cargo.toml
z_std_collections/: Cargo.toml
z_std_function_method/: Cargo.toml
z_std_other/: Cargo.toml
z_std_string/: Cargo.toml
z_std_struct_enum/: Cargo.toml
z_std_trait/: Cargo.toml
z_utility_traits/: Cargo.toml
(+208 files in other folders)
