[workspace]
resolver = "2"

# members — Packages to include in the workspace.
members = [
    "a_basic", "b_basic",
    "c_pattern_matching",
    "d_error_handing",
    "e_container",
    "f_advanced",
    "s_concurrency",
    "y_project_structure", "y_test", 
    "z_std_function_method",
    "z_std_trait"
]
